# yt-dlp-interactif

./: .coverage  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: GUIDE-METHODOLOGIE.md  spec-extraire-audio.md
docs/reference/: cartographie-yt-dlp.md  yt-dlp-help-2026.06.09.txt  yt-dlp-options.json
src/ytdlp_interactif/: __main__.py
src/ytdlp_interactif/core/: command_builder.py  environment.py  errors.py  paths.py  probe.py  progress.py  runner.py  search.py
src/ytdlp_interactif/intents/: batch.py  convert.py  custom.py  download_playlist.py  download_video.py  extract_audio.py  extras.py  live.py  network.py  sections.py  sponsorblock.py  subtitles.py  unlock.py
src/ytdlp_interactif/ui/: explain.py  questionary_ui.py
tests/: conftest.py  test_batch.py  test_command_builder.py  test_custom.py  test_download_video.py  test_environment.py  test_errors.py  test_explain.py  test_extra_intents.py  test_extract_audio.py  test_flow_recovery.py  test_flow_ui.py  test_paths.py  test_playlist.py  test_probe.py  test_progress.py  test_runner.py  test_search.py  test_sections.py  test_sponsorblock.py  test_subtitles.py  test_ui_helpers.py
tools/: parse_help.py
