[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ytdlp-interactif"
version = "0.1.0"
description = "Interface interactive rendant yt-dlp accessible à tous"
requires-python = ">=3.11"
dependencies = ["questionary>=2.1"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
ytdlp-interactif = "ytdlp_interactif.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
